# blackroad-operator

./: .env.example  .gitignore  Dockerfile  LICENSE  README.md  dispatcher.js  docker-compose.yml  index.js  pyproject.toml  requirements.txt  tasks.js  wrangler.toml
operator/: __init__.py  audit.py  config.py  main.py  router.py
operator/models/: __init__.py  audit.py  requests.py  responses.py
operator/providers/: __init__.py  base.py  claude.py  hailo.py  openai.py  physics.py  salesforce.py
public/: index.html  robots.txt  sitemap.xml
