[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "blackroad-operator"
version = "1.0.0"
description = "The Central Routing Layer - Routes requests to the right tool at the right time"
readme = "README.md"
license = {text = "Proprietary"}
authors = [
    {name = "BlackRoad OS, Inc.", email = "blackroad.systems@gmail.com"}
]
requires-python = ">=3.11"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "httpx>=0.26.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "anthropic>=0.18.0",
    "openai>=1.10.0",
    "numpy>=1.26.0",
    "scipy>=1.12.0",
    "simple-salesforce>=1.12.0",
    "python-json-logger>=2.0.0",
    "structlog>=24.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "black>=24.1.0",
    "ruff>=0.1.0",
]

[project.scripts]
blackroad-operator = "operator.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["operator*"]

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.ruff]
line-length = 100
target-version = "py311"
